# django_user_practice

./: db.sqlite3  manage.py  pyproject.toml
notes/: forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py
notes/templates/notes/: create_note.html
practice_user_creation/: asgi.py  settings.py  urls.py  wsgi.py
templates/registration/: login.html  signup.html
user/: forms.py  urls.py  views.py
user/templates/user/: profile.html  signup.html
