[tool.poetry]
name = "practice-user-creation"
version = "0.1.0"
description = ""
authors = ["Atticus Ezis <atticus.ezis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
